# UISMV_AutonomousProgramming

./: CMakeLists.txt  README.md  package.xml
include/shell_simulation/: example_publisher.h
launch/: shell_simulation.launch
src/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  example_publisher.cpp  shell_simulation_node.cpp
src/atomic_configure/: .rosinstall  setup.sh
src/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  setup_cached.sh
src/catkin_generated/installspace/: shell_simulationConfig.cmake
src/devel/: .catkin  local_setup.sh
src/devel/lib/pkgconfig/: shell_simulation.pc
src/devel/lib/shell_simulation/: shell_simulation_node
src/devel/share/shell_simulation/cmake/: shell_simulationConfig.cmake
src/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/gtest/googletest/: CTestTestfile.cmake  Makefile
