<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shell_simulation</name>
  <version>0.0.0</version>
  <description>The shell_simulation package</description>

  <maintainer email="apgahana@gmail.org">Adiro Pradaya Gahana</maintainer>

  <license>TODO</license>

  <author email="imanherlambang14@gmail.com">Iman Herlambang Suherman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
</package>
